@@ -2,6 +2,8 @@ glibc (2.30-6) UNRELEASED; urgency=medium
 
   * debian/sysdeps/s390x.mk: do not set libc_rtlddir, it is set to the
     default.
+  * debian/rules.d/debhelper.mk: only create the dynamic linker in the udeb
+    if it doesn't already exist.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 May 2020 09:25:47 +0200
 
